--- a/dashboard.html
+++ b/dashboard.html
@@ -242,7 +242,7 @@
 
   <div class="dashboard-container">
     <div class="dashboard-box">
-      <h2 class="welcome-message">Hello, <span id="user-name">Sujal</span> 👋</h2>
+      <h2 class="welcome-message">Hello, <span id="user-name">cutie</span> 👋</h2>
 
       <div class="dashboard-features">
         <div class="feature-card" onclick="showOutfitSuggestions()">
