--- a/dashboard.html
+++ b/dashboard.html
@@ -10,12 +10,12 @@
 
   <style>
     :root {
-      --primary: #3a568a;
-      --secondary: #632525;
+      --primary: #0a0a0a;
+      --secondary: #2b2a2a;
       --text-dark: #1e1e1e;
       --text-light: #f4f4f4;
       --card-dark: rgba(0, 0, 0, 0.4);
-      --card-light: rgba(255, 255, 255, 0.5);
+      --card-light: rgba(34, 34, 34, 0.5);
       --accent: #f6fafa;
     }
 
@@ -31,7 +31,7 @@
     }
 
     body.light-mode {
-      background: linear-gradient(to right, #cfb1b1, #b3a8a8);
+      background: linear-gradient(to right, #2c2c2c, #2b2a2a);
       color: var(--text-dark);
     }
 
@@ -48,7 +48,7 @@
     }
 
     body.light-mode nav.navbar {
-      background: rgba(109, 44, 44, 0.6);
+      background: rgba(32, 32, 32, 0.6);
     }
 
     .logo {
@@ -138,7 +138,7 @@
     }
 
     .logout-btn {
-      background: #ff4d4d;
+      background: #202020;
       border: none;
       padding: 0.6rem 1.4rem;
       color: white;
@@ -149,7 +149,7 @@
     }
 
     .logout-btn:hover {
-      background: #e63946;
+      background: #272727;
     }
 
     #upload-section {
@@ -242,7 +242,7 @@
 
   <div class="dashboard-container">
     <div class="dashboard-box">
-      <h2 class="welcome-message">Hello, <span id="user-name">cutie</span> 👋</h2>
+      <h2 class="welcome-message">Hello, <span id="user-name">Sujal</span> 👋</h2>
 
       <div class="dashboard-features">
         <div class="feature-card" onclick="showOutfitSuggestions()">
