--- a/dashboard.html
+++ b/dashboard.html
@@ -12,10 +12,10 @@
     :root {
       --primary: #0a0a0a;
       --secondary: #2b2a2a;
-      --text-dark: #1e1e1e;
+      --text-dark: #070707;
       --text-light: #f4f4f4;
       --card-dark: rgba(0, 0, 0, 0.4);
-      --card-light: rgba(34, 34, 34, 0.5);
+      --card-light: rgba(250, 243, 243, 0.897);
       --accent: #f6fafa;
     }
 
@@ -48,7 +48,7 @@
     }
 
     body.light-mode nav.navbar {
-      background: rgba(32, 32, 32, 0.6);
+      background: rgba(247, 245, 245, 0.6);
     }
 
     .logo {
@@ -123,7 +123,7 @@
     .feature-card:hover {
       transform: translateY(-5px);
       border-color: var(--accent);
-      box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 10px 25px rgba(153, 153, 153, 0.2);
     }
 
     .feature-card i {
@@ -155,7 +155,7 @@
     #upload-section {
       margin-top: 2rem;
       padding: 1.5rem;
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(92, 91, 91, 0.473);
       border: 2px dashed var(--accent);
       border-radius: 12px;
       text-align: center;
@@ -242,7 +242,7 @@
 
   <div class="dashboard-container">
     <div class="dashboard-box">
-      <h2 class="welcome-message">Hello, <span id="user-name">Sujal</span> 👋</h2>
+      <h2 class="welcome-message">Hello, <span id="user-name">user</span> 👋</h2>
 
       <div class="dashboard-features">
         <div class="feature-card" onclick="showOutfitSuggestions()">
