--- a/onboarding.html
+++ b/onboarding.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #3a568a, #632525);
+      background: linear-gradient(to right, #1b1b1b, #222222);
       color: white;
       display: flex;
       justify-content: center;
@@ -44,21 +44,21 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
-      background: #ff6b81;
+      background: #4b4a4a;
       color: white;
       transition: 0.3s;
     }
 
     button:hover {
-      background: #ff4757;
+      background: #4d4d4e2a;
     }
 
     .nav-btn {
-      background: #3742fa;
+      background: #2f2f30;
     }
 
     .nav-btn:hover {
-      background: #2f3542;
+      background: #4d4d4e2a;
     }
   </style>
 </head>
@@ -114,7 +114,7 @@
 
     <!-- Final -->
     <div class="question" id="finalQ">
-      <h3>Thanks 🎉</h3>
+      <h3>Thanks </h3>
       <p>Your style preferences are saved!</p>
       <button class="nav-btn" onclick="finishOnboarding()">Go to Dashboard</button>
     </div>
