--- a/start.html
+++ b/start.html
@@ -15,7 +15,7 @@
     }
 
     body {
-      background: linear-gradient(to right, #3a568a, #632525);
+      background: linear-gradient(to right, #1b1b1b, #222222);
       color: white;
       min-height: 100vh;
       display: flex;
@@ -47,7 +47,7 @@
     }
 
     .login-btn:hover {
-      background-color: #52e0c4;
+      background-color: #4c4e4e;
     }
 
     .hero {
@@ -90,7 +90,7 @@
 
     .feature-box i {
       font-size: 2rem;
-      color: #64ffda;
+      color: #4bb6b6;
       margin-bottom: 0.8rem;
     }
 
